ServerThread and ServerSagrada modified.

--- a/doc/it/polimi/se2018/view/Decision.html
+++ b/doc/it/polimi/se2018/view/Decision.html
@@ -165,7 +165,7 @@ extends java.lang.Object</pre>
 </tr>
 <tr id="i4" class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><span class="memberNameLink"><a href="../../../../it/polimi/se2018/view/Decision.html#setTypeDecision-it.polimi.se2018.view.TypeDecision-">setTypeDecision</a></span>(<a href="../../../../it/polimi/se2018/view/TypeDecision.html" title="enum in it.polimi.se2018.view">TypeDecision</a>&nbsp;t)</code>&nbsp;</td>
+<td class="colLast"><code><span class="memberNameLink"><a href="../../../../it/polimi/se2018/view/Decision.html#setTypeDecision-it.polimi.se2018.events.TypeDecision-">setTypeDecision</a></span>(<a href="../../../../it/polimi/se2018/view/TypeDecision.html" title="enum in it.polimi.se2018.view">TypeDecision</a>&nbsp;t)</code>&nbsp;</td>
 </tr>
 <tr id="i5" class="rowColor">
 <td class="colFirst"><code>void</code></td>
