--- a/doc/it/polimi/se2018/view/MessageNewTurn.html
+++ b/doc/it/polimi/se2018/view/MessageNewTurn.html
@@ -97,7 +97,7 @@
 <li>java.util.Observable</li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.view.MessageNewTurn</li>
+<li>it.polimi.se2018.events.MessageNewTurn</li>
 </ul>
 </li>
 </ul>
