--- a/doc/it/polimi/se2018/view/TypeDecision.html
+++ b/doc/it/polimi/se2018/view/TypeDecision.html
@@ -103,7 +103,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Enum&lt;<a href="../../../../it/polimi/se2018/view/TypeDecision.html" title="enum in it.polimi.se2018.view">TypeDecision</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.view.TypeDecision</li>
+<li>it.polimi.se2018.events.TypeDecision</li>
 </ul>
 </li>
 </ul>
