--- a/src/main/resources/fileutils/sagradaMatch.fxml
+++ b/src/main/resources/fileutils/sagradaMatch.fxml
@@ -264,7 +264,10 @@
                   <Pane prefHeight="200.0" prefWidth="200.0" />
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
-                        <Text fx:id="text" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose connection" />
+                        <Text fx:id="text" fill="WHITE" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="2.0" text="Choose connection">
+                           <font>
+                              <Font name="Segoe UI Black" size="12.0" />
+                           </font></Text>
                         <Text fx:id="errorText" strokeType="OUTSIDE" strokeWidth="0.0" />
                         <RadioButton fx:id="radioBtnA" mnemonicParsing="false" onAction="#handleRadioBtnA" selected="true" text="Socket" />
                         <RadioButton fx:id="radioBtnB" mnemonicParsing="false" onAction="#handleRadioBtnB" text="RMI" />
