--- a/src/main/resources/fileutils/sagradaMatch.fxml
+++ b/src/main/resources/fileutils/sagradaMatch.fxml
@@ -268,7 +268,10 @@
                            <font>
                               <Font name="Segoe UI Black" size="12.0" />
                            </font></Text>
-                        <Text fx:id="errorText" strokeType="OUTSIDE" strokeWidth="0.0" />
+                        <Text fx:id="errorText" stroke="#0a0a0a" strokeType="OUTSIDE" strokeWidth="2.0">
+                           <font>
+                              <Font name="Segoe UI Black" size="12.0" />
+                           </font></Text>
                         <RadioButton fx:id="radioBtnA" mnemonicParsing="false" onAction="#handleRadioBtnA" selected="true" text="Socket" />
                         <RadioButton fx:id="radioBtnB" mnemonicParsing="false" onAction="#handleRadioBtnB" text="RMI" />
                         <TextField fx:id="textField" disable="true" maxWidth="100.0" minWidth="100.0" opacity="0.0" prefWidth="100.0" />
